--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "animate.css": "^4.1.1"
+    "animate.css": "^4.1.1",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1"
   }
 }
