--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
     "@babel/plugin-proposal-regexp-modifiers": "^7.21.0",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.21.4",
     "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
